[gd_scene load_steps=12 format=3 uid="uid://dds42avibdl3k"]

[ext_resource type="PackedScene" uid="uid://j5udtokn6d60" path="res://scenes/car.tscn" id="2_n1x8e"]
[ext_resource type="PackedScene" uid="uid://d4amq4tvfwyjq" path="res://scenes/checkpoint.tscn" id="2_ujoo2"]
[ext_resource type="Script" uid="uid://ca20qk44hdbk0" path="res://scripts/controls/cameraScript.gd" id="3_5oo0w"]
[ext_resource type="Script" uid="uid://cl7j5uca4c7rt" path="res://scripts/manager/gameManager.gd" id="3_fk43m"]
[ext_resource type="Script" uid="uid://uydiwf60ene3" path="res://scripts/manager/agentManager.gd" id="4_3kn1h"]
[ext_resource type="Script" uid="uid://orhx38b6607j" path="res://scripts/manager/raceProgressionManager.gd" id="5_bpni2"]
[ext_resource type="Script" uid="uid://bmlt1pbx6klra" path="res://scripts/input_system/inputManager.gd" id="7_f3i7v"]
[ext_resource type="Script" uid="uid://cctkukw41idmq" path="res://scripts/input_system/inputContext.gd" id="8_dsgpv"]
[ext_resource type="Resource" uid="uid://dl621ckkmjlg8" path="res://assets/input/contexts/trackMode.tres" id="9_tmu72"]
[ext_resource type="Script" uid="uid://bywd18j48kii4" path="res://scripts/manager/trackManager.gd" id="10_tmu72"]
[ext_resource type="PackedScene" uid="uid://cg64jxxtbjk4p" path="res://scenes/pathTrack.tscn" id="11_405ff"]

[node name="TrackScene" type="Node2D"]

[node name="track" type="Node2D" parent="."]
position = Vector2(13, 13)

[node name="TrackOrigin" type="Node2D" parent="track"]
position = Vector2(-17, -248)

[node name="Checkpoints" type="Node2D" parent="track"]

[node name="Checkpoint" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(782, -230)
rotation = 1.5708

[node name="Checkpoint2" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(1959, -230)
rotation = 1.5708

[node name="Checkpoint3" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(3271, -213)
rotation = 1.5708

[node name="Checkpoint4" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(4372, -196)
rotation = 1.5708

[node name="Checkpoint5" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(5784, -224)
rotation = 1.5708

[node name="Checkpoint6" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(13050, -121)
rotation = 0.785398

[node name="Checkpoint7" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(6988, -1194)

[node name="Checkpoint8" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(6998, -2067)

[node name="Checkpoint9" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(7026, -3106)

[node name="Checkpoint10" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(7002, -4128)

[node name="Checkpoint11" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(7009, -5250)

[node name="Checkpoint12" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(7012, -6548)

[node name="Checkpoint13" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(15897, -12217)
rotation = -0.785398

[node name="Checkpoint14" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(6095, -7335)
rotation = -1.5708

[node name="Checkpoint15" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(5287, -7338)
rotation = -1.5708

[node name="Checkpoint16" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(4362, -7331)
rotation = -1.5708

[node name="Checkpoint17" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(3357, -7331)
rotation = -1.5708

[node name="Checkpoint18" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(2345, -7324)
rotation = -1.5708

[node name="Checkpoint19" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(1378, -7317)
rotation = -1.5708

[node name="Checkpoint20" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(411, -7331)
rotation = -1.5708

[node name="Checkpoint21" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-642, -7338)
rotation = -1.5708

[node name="Checkpoint22" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-1705, -7331)
rotation = -1.5708

[node name="Checkpoint23" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-2779, -7352)
rotation = -1.5708

[node name="Checkpoint24" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-3759, -7342)
rotation = -1.5708

[node name="Checkpoint25" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-4822, -7335)
rotation = -1.5708

[node name="Checkpoint26" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-2465, -16552)
rotation = -2.35619

[node name="Checkpoint27" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-6311, -6487)
rotation = -3.14159

[node name="Checkpoint28" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-6294, -5581)
rotation = -3.14159

[node name="Checkpoint29" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-6294, -4547)
rotation = -3.14159

[node name="Checkpoint30" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-6294, -3452)
rotation = -3.14159

[node name="Checkpoint31" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-6270, -2412)
rotation = -3.14159

[node name="Checkpoint32" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-6282, -1525)
rotation = -3.14159

[node name="Checkpoint33" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-5097, -4793)
rotation = -3.92699

[node name="Checkpoint34" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-5376, -394)
rotation = -4.71239

[node name="Checkpoint35" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-4387, -360)
rotation = -4.71239

[node name="Checkpoint36" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-3156, -353)
rotation = -4.71239

[node name="Checkpoint37" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-1972, -353)
rotation = -4.71239

[node name="Checkpoint38" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(-795, -353)
rotation = -4.71239

[node name="Checkpoint39" parent="track/Checkpoints" instance=ExtResource("2_ujoo2")]
position = Vector2(39, -340)
rotation = -4.71239

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("3_fk43m")

[node name="AgentManager" type="Node2D" parent="GameManager"]
script = ExtResource("4_3kn1h")
car_scene = ExtResource("2_n1x8e")
population_size = 100
generation_time = 30.0
is_training = true
elitism_percent = 0.1
weight = 0.3
mutate_chance = 0.2
input_layer_neurons = 6

[node name="RaceProgressionManager" type="Node2D" parent="GameManager"]
script = ExtResource("5_bpni2")
checkpoint_nodes = Array[NodePath]([NodePath("../../track/Checkpoints/Checkpoint6"), NodePath("../../track/Checkpoints/Checkpoint13"), NodePath("../../track/Checkpoints/Checkpoint26"), NodePath("../../track/Checkpoints/Checkpoint33")])

[node name="InputManager" type="Node" parent="GameManager"]
script = ExtResource("7_f3i7v")
contexts_intake = Array[ExtResource("8_dsgpv")]([ExtResource("9_tmu72")])

[node name="TrackManager" type="Node2D" parent="GameManager"]
script = ExtResource("10_tmu72")
sample_step = 4.0
track_width = 30.0
curb_thickness = 1.0
use_cubic_sampling = true
debug_show_lines = true

[node name="Track" parent="GameManager" instance=ExtResource("11_405ff")]
scale = Vector2(30, 30)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_5oo0w")
min_zoom = 0.02
